codex-rs/core/tests/suite/snapshots/all__suite__pending_input__pending_input_queued_mail_after_commentary.snap
---
source: core/tests/suite/pending_input.rs
assertion_line: 224
expression: snapshot
---
Scenario: /responses POST bodies (input only, redacted like other suite snapshots)

## First request
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user[2]:
    [01] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
    [02] <MULTIAGENT_CONTEXT:direct_subagents=0>
02:message/user:first prompt

## Second request
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user[2]:
    [01] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
    [02] <MULTIAGENT_CONTEXT:direct_subagents=0>
02:message/user:first prompt
03:message/assistant:first answer
04:message/assistant:{"author":"/root/worker","recipient":"/root","other_recipients":[],"content":"queued child update","operation":"unknown","trigger_turn":false,"sender_thread_id":null,"recipient_thread_id":null,"status":null}
